[gd_scene load_steps=22 format=3 uid="uid://rrq746i7i6ng"]

[ext_resource type="Script" path="res://Cenas/level_3.gd" id="1_hs101"]
[ext_resource type="Texture2D" uid="uid://coehgfxnmu45o" path="res://Assets/pixil-frame-1 (2).png" id="1_mw5w1"]
[ext_resource type="PackedScene" uid="uid://b7lyloobwy3eu" path="res://Cenas/poison.tscn" id="1_uhdt3"]
[ext_resource type="Texture2D" uid="uid://dn5pnxqammsxg" path="res://Assets/pixil-frame-10.png" id="3_bfsc0"]
[ext_resource type="PackedScene" uid="uid://b8oa7y21kuuln" path="res://Cenas/bola.tscn" id="3_ipxfi"]
[ext_resource type="Texture2D" uid="uid://da2f08wmtpdou" path="res://Assets/pixil-frame-9.png" id="4_6uyer"]
[ext_resource type="PackedScene" uid="uid://chwdvm8ujw2d5" path="res://Cenas/player_1_level.tscn" id="5_p5i1d"]
[ext_resource type="PackedScene" uid="uid://y3dmd6d3wdwb" path="res://Cenas/player_2_level.tscn" id="6_d3eyh"]
[ext_resource type="PackedScene" uid="uid://bqg7rdly1rdq4" path="res://Cenas/door_left.tscn" id="7_5l5yy"]
[ext_resource type="PackedScene" uid="uid://coi538gg1rsad" path="res://Cenas/block_oneway.tscn" id="7_cy4b6"]
[ext_resource type="PackedScene" uid="uid://dswnvcoflll8f" path="res://Cenas/button.tscn" id="8_dx2kc"]
[ext_resource type="Texture2D" uid="uid://b3rqp70nl8c0n" path="res://Assets/Telhado.png" id="8_ngt8i"]
[ext_resource type="PackedScene" uid="uid://bfsg6kssa0egr" path="res://Cenas/door.tscn" id="10_qj3nm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7ycka"]
texture = ExtResource("1_mw5w1")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_quthk"]
texture = ExtResource("4_6uyer")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bwxsp"]
texture = ExtResource("3_bfsc0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_j7hq4"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_7ycka")
sources/1 = SubResource("TileSetAtlasSource_quthk")
sources/2 = SubResource("TileSetAtlasSource_bwxsp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pyyaq"]
texture = ExtResource("4_6uyer")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vbbqm"]
texture = ExtResource("3_bfsc0")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vsllu"]
sources/0 = SubResource("TileSetAtlasSource_pyyaq")
sources/1 = SubResource("TileSetAtlasSource_vbbqm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf3f2"]
size = Vector2(332.427, 25.2975)

[node name="level_3" type="Node"]
script = ExtResource("1_hs101")

[node name="Poison" parent="." instance=ExtResource("1_uhdt3")]
position = Vector2(-264, 224)

[node name="Poison2" parent="." instance=ExtResource("1_uhdt3")]
position = Vector2(-128, 224)

[node name="Bola" parent="." instance=ExtResource("3_ipxfi")]
position = Vector2(-80, 200)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_j7hq4")
format = 2
layer_0/tile_data = PackedInt32Array(983068, 0, 0, 917532, 0, 0, 851996, 0, 0, 851995, 0, 0, 851994, 0, 0, 917530, 0, 0, 917531, 0, 0, 983067, 0, 0, 983066, 0, 0, 983065, 0, 0, 917529, 0, 0, 851993, 0, 0, 983064, 0, 0, 917528, 0, 0, 851992, 0, 0, 983063, 0, 0, 917527, 0, 0, 851991, 0, 0, 983062, 0, 0, 917526, 0, 0, 851990, 0, 0, 851989, 0, 0, 851988, 0, 0, 851987, 0, 0, 851986, 0, 0, 851985, 0, 0, 851984, 0, 0, 851983, 0, 0, 851982, 0, 0, 851981, 0, 0, 851980, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 917525, 0, 0, 983061, 0, 0, 917524, 0, 0, 917523, 0, 0, 917522, 0, 0, 917521, 0, 0, 917520, 0, 0, 917519, 0, 0, 917518, 0, 0, 917517, 0, 0, 917516, 0, 0, 786459, 2, 0, 720923, 2, 0, 655387, 2, 0, 589851, 2, 0, 524315, 2, 0, 458779, 2, 0, 393243, 2, 0, 327707, 2, 0, 262171, 2, 0, 196635, 2, 0, 131099, 2, 0, 65563, 2, 0, 27, 2, 0, -65509, 2, 0, -131045, 2, 0, -196581, 2, 0, -262117, 2, 0, -327653, 2, 0, -393189, 2, 0, -458725, 2, 0, 589850, 2, 0, 589849, 2, 0, 589848, 2, 0, 458772, 2, 0, 458771, 2, 0, 458770, 2, 0, 458769, 2, 0, 458768, 1, 0, 327706, 2, 0, 327705, 2, 0, 327704, 2, 0, 196628, 2, 0, 196627, 2, 0, 196626, 2, 0, 196625, 2, 0, 196624, 1, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, -65516, 2, 0, -65517, 2, 0, -65518, 2, 0, -65519, 2, 0, -65520, 1, 0, 655376, 1, 0, 589840, 1, 0, 524304, 1, 0, 393232, 1, 0, 327696, 1, 0, 262160, 1, 0, 131088, 1, 0, 65552, 1, 0, 16, 1, 0, -131056, 1, 0, -196592, 1, 0, -262128, 2, 0, -262129, 2, 0, -262130, 2, 0, -262131, 2, 0, -262132, 2, 0, -262133, 2, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 983049, 0, 0, 917513, 0, 0, 851977, 0, 0, 851976, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 983048, 0, 0, 917512, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 983045, 0, 0, 917509, 0, 0, 851973, 0, 0, 851972, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 983044, 0, 0, 917508, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 917501, 0, 0, 917500, 0, 0, 917499, 0, 0, 917498, 0, 0, 917494, 0, 0, 917493, 0, 0, 917492, 0, 0, 917487, 0, 0, 917486, 0, 0, 917485, 0, 0, 917484, 0, 0, 917482, 0, 0, 917483, 0, 0, 917481, 0, 0, 917480, 0, 0, 917479, 0, 0, 917478, 0, 0, 917477, 0, 0, 917476, 0, 0, 917475, 0, 0, 983011, 0, 0, 983012, 0, 0, 983013, 0, 0, 983014, 0, 0, 983015, 0, 0, 983016, 0, 0, 983017, 0, 0, 983018, 0, 0, 983019, 0, 0, 983020, 0, 0, 983021, 0, 0, 983022, 0, 0, 983023, 0, 0, 983024, 0, 0, 983025, 0, 0, 983026, 0, 0, 983027, 0, 0, 983028, 0, 0, 983029, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 0, 0, 983034, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 983041, 0, 0, 983040, 0, 0, 1048575, 0, 0, 1048574, 0, 0, 1048573, 0, 0, 1048572, 0, 0, 1048571, 0, 0, 1048568, 0, 0, 1048567, 0, 0, 1048566, 0, 0, 1048565, 0, 0, 1048564, 0, 0, 1048563, 0, 0, 1048562, 0, 0, 1048561, 0, 0, 1048560, 0, 0, 1048559, 0, 0, 1048558, 0, 0, 1048557, 0, 0, 1048556, 0, 0, 1048555, 0, 0, 1048554, 0, 0, 1048553, 0, 0, 1048552, 0, 0, 1048551, 0, 0, 1048550, 0, 0, 1048549, 0, 0, 1048548, 0, 0, 1048547, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 851939, 0, 0, 786403, 0, 0, 720867, 0, 0, 655331, 0, 0, 589795, 0, 0, 589796, 0, 0, 589797, 0, 0, 589798, 0, 0, 589799, 0, 0, 589800, 0, 0, 589801, 0, 0, 655337, 0, 0, 720873, 0, 0, -262134, 2, 0, -262135, 2, 0, 262131, 1, 0, 196595, 1, 0, 131059, 1, 0, 65523, 2, 0, 65522, 2, 0, 65521, 2, 0, 65520, 2, 0, 65519, 2, 0, 65518, 2, 0, 65517, 2, 0, 65516, 2, 0, 65515, 2, 0, 65514, 2, 0, 65513, 2, 0, 65512, 2, 0, 65511, 2, 0, 65510, 2, 0, 65509, 2, 0, 65508, 2, 0, 65507, 2, 0, -29, 2, 0, -65565, 2, 0, -131101, 2, 0, -262173, 2, 0, -196637, 2, 0, -327709, 2, 0, -327708, 2, 0, -327707, 2, 0, -327706, 2, 0, -327705, 2, 0, -327704, 2, 0, -327703, 2, 0, -327702, 2, 0, -262166, 2, 0, -196630, 2, 0, -131094, 2, 0, 917491, 0, 0, 851969, 0, 0, 262154, 2, 0, 262153, 2, 0, 262152, 2, 0, 262151, 2, 0, 262150, 2, 0, 262149, 2, 0, 262148, 2, 0, 262147, 2, 0, 262146, 2, 0, 262145, 2, 0, 262144, 2, 0, 327679, 2, 0, 327678, 2, 0, 327677, 2, 0, 327676, 2, 0, 327675, 2, 0, 327674, 2, 0, 327673, 2, 0, 327672, 2, 0, 327671, 2, 0, 327670, 2, 0, 327669, 2, 0, 327668, 2, 0, 327667, 2, 0)

[node name="TileMap2" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_vsllu")
format = 2
layer_0/tile_data = PackedInt32Array(786452, 0, 0, 720916, 0, 0, 655380, 0, 0, 524308, 0, 0, 589844, 0, 0, 458772, 0, 0, 393236, 0, 0, 327700, 0, 0, 262164, 0, 0, 196628, 0, 0, 131092, 0, 0, 20, 0, 0, 65556, 0, 0, -65516, 0, 0, -131052, 0, 0, -196588, 0, 0, -262124, 0, 0, -393196, 0, 0, -327660, 0, 0, 458768, 1, 0, 196624, 1, 0, -65520, 1, 0, 786443, 0, 0, 720907, 0, 0, 655371, 0, 0, 589835, 0, 0, 524299, 0, 0, 458763, 0, 0, 393227, 0, 0, 327691, 0, 0, 262155, 1, 0, 196619, 0, 0, 131083, 0, 0, 65547, 0, 0, 11, 0, 0, -131061, 0, 0, -65525, 0, 0, -196597, 0, 0, -262133, 0, 0, -327669, 0, 0, -393205, 0, 0, -458732, 0, 0, -524268, 0, 0, -458736, 0, 0, -524272, 0, 0, -458741, 0, 0, -524277, 0, 0, -524261, 1, 0, -327655, 0, 0, -393191, 0, 0, -458727, 0, 0, -524263, 0, 0, -327657, 0, 0, -393193, 0, 0, -458729, 0, 0, -524265, 0, 0, -327664, 0, 0, -393200, 0, 0, -262128, 0, 0, -196592, 0, 0)

[node name="Button1" parent="." instance=ExtResource("8_dx2kc")]
position = Vector2(-224, 0)

[node name="Button2" parent="." instance=ExtResource("8_dx2kc")]
position = Vector2(-176, 208)

[node name="Button3" parent="." instance=ExtResource("8_dx2kc")]
position = Vector2(-384, 0)

[node name="Block_oneway" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(344, -56)

[node name="Block_oneway7" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(312, -56)

[node name="Block_oneway8" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(328, -56)

[node name="Block_oneway2" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(424, -56)

[node name="Block_oneway3" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(408, -56)

[node name="Block_oneway4" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(392, -56)

[node name="Block_oneway5" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(376, -56)

[node name="Block_oneway6" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(360, -56)

[node name="Player 1 - Level" parent="." instance=ExtResource("5_p5i1d")]
position = Vector2(360, 168)

[node name="Telhado" type="Sprite2D" parent="."]
position = Vector2(320, -168)
scale = Vector2(1.74, 1.22)
texture = ExtResource("8_ngt8i")

[node name="Block_oneway9" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(296, -56)

[node name="Block_oneway10" parent="." instance=ExtResource("7_cy4b6")]
position = Vector2(280, -56)

[node name="DoorLeft1" parent="." instance=ExtResource("7_5l5yy")]
position = Vector2(256, 192)

[node name="DoorLeft2" parent="." instance=ExtResource("7_5l5yy")]
position = Vector2(-352, -16)

[node name="DoorLeft3" parent="." instance=ExtResource("7_5l5yy")]
position = Vector2(-368, 192)

[node name="Door1" parent="." instance=ExtResource("10_qj3nm")]
position = Vector2(-432, -16)

[node name="Door2" parent="." instance=ExtResource("10_qj3nm")]
position = Vector2(-432, 192)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = -179.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 58.0
rotation = -0.314159

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-17.3009, -10.2776)
rotation = -0.314159
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_nf3f2")

[node name="Player 2 - Level" parent="." instance=ExtResource("6_d3eyh")]
position = Vector2(393, 181)

[connection signal="body_entered" from="Bola" to="." method="_on_bola_body_entered"]
[connection signal="body_entered" from="Button1" to="." method="_on_button_1_body_entered"]
[connection signal="body_exited" from="Button1" to="." method="_on_button_1_body_exited"]
[connection signal="body_entered" from="Button2" to="." method="_on_button_2_body_entered"]
[connection signal="body_exited" from="Button2" to="." method="_on_button_2_body_exited"]
[connection signal="body_entered" from="Button3" to="." method="_on_button_3_body_entered"]
[connection signal="body_exited" from="Button3" to="." method="_on_button_3_body_exited"]
[connection signal="body_entered" from="Door1" to="." method="_on_door_1_body_entered"]
[connection signal="body_entered" from="Door2" to="." method="_on_door_2_body_entered"]
